css/commonstyle.css
/*
* Elements present in this file
*html, body, font and layout
*Preloader
*Nav Bar
*Footer
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* font-family: chalkboard_seregular; */
    font-family: 'ABeeZee', sans-serif;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    background-image: url('luke-chesser-CxBx_J3yp9g-unsplash.jpg');
    background-attachment: fixed;
    background-size: cover;
    background-color: #2F2F2F;
}


/* ---------------- Preloader ------------------------- */
.preload {
    position: fixed;
    top: 50%;
    left: 50%;
    width: 100vw;
    transform: translate(-50%, -50%);
    height: 100vh;
    background: #2F2F2F;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transform: translate(-50%, -50%);
    z-index: 99;
    transition: all 0.5s ease;
}

.preload img {
    height: 200px;
    transform: scale(1);
    transition-property: transform;
    transition-duration: 1s;
}

.preload img:hover {
    transform: scale(1.4);
}

.preload h3 {
    position: absolute;
    top: 75%;
    transform: translateY(-75%);
    color: rgb(255, 255, 255);
    font-size: 30px;
}

/* loading dots */

.preload h3:after {
    content: '.';
    animation: dots 1s steps(5, end) infinite;
}

@keyframes dots {

    0%,
    20% {
        color: rgba(0, 0, 0, 0);
        text-shadow:
            .25em 0 0 rgba(0, 0, 0, 0),
            .5em 0 0 rgba(0, 0, 0, 0);
    }

    40% {
        color: white;
        text-shadow:
            .25em 0 0 rgba(0, 0, 0, 0),
            .5em 0 0 rgba(0, 0, 0, 0);
    }

    60% {
        text-shadow:
            .25em 0 0 white,
            .5em 0 0 rgba(0, 0, 0, 0);
    }

    80%,
    100% {
        text-shadow:
            .25em 0 0 white,
            .5em 0 0 white;
    }
}

.preload-finish {
    opacity: 0;
    pointer-events: none;
}

/* ---------------- Preloader ------------------------- */


/* ---------------- Nav Bar ------------------------- */

nav {
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 9vh;
    background-color: rgba(0, 0, 0, .8);
    font-family: "Poppins", sans-serif;
    z-index: 3;
}

.logotitle img {
    width: 130px;
    margin-top: 13px;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 40%;
}

.nav-links li {
    list-style: none;
}

.nav-links a:hover {
    color: white;
    border-bottom: 1px solid whitesmoke;
}

.nav-links a {
    color: #b9b9b9;
    text-decoration: none;
    letter-spacing: 1.5px;
    font-weight: bold;
    font-size: 17px;
    border-bottom: 1px solid transparent;
    transition: border-bottom 0.5s;
}

.burger {
    display: none;
}

.burger div {
    width: 25px;
    height: 3px;
    background-color: rgb(226, 226, 226);
    margin: 5px;
    transition: all 0.3s ease;
}

@media screen and (max-width: 1024px) {
    .nav-links {
        width: 60%;
    }
}

@media screen and (max-width: 768px) {
    body {
        overflow-x: hidden;
        background-attachment: cover;
    }

    .nav-links {
        margin-top: 16px;
        position: fixed;
        overflow: hidden;
        right: 0px;
        height: 93vh;
        top: 7vh;
        background-color: rgba(0, 0, 0, .8);
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }

    .nav-links li {
        opacity: 0;
    }

    .burger {
        display: block;
        cursor: pointer;
    }
}

.nav-active {
    transform: translateX(0%);
}

@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }

    to {
        opacity: 1;
        transform: translateX(0);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

/* ---------------- Nav Bar ------------------------- */

/* ---- footer SECTION ----- */
footer {
    /* background: rgb(37, 37, 37); */
    position: relative;
    bottom: 0;
    right: 0;
    left: 0;
    width: 100vw;
    font-family: "open Sans";
    padding-top: 4px;
    color: white;

}

/* social icons */
.footer-content {
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer-content ul {
    display: flex;
}

.footer-content ul li {
    list-style-type: none;
    margin: 30px;
}

.footer-content ul li a {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}

.footer-content ul li .fa {
    font-size: 27px;
    color: black;
    line-height: 100px;
    transition: 500ms;
}

.footer-content ul li a {
    position: relative;
    width: 60px;
    height: 60px;
    background-color: rgba(255, 255, 255, 0.7);
    text-align: center;
    transition: 500ms;
    box-shadow: -20px 20px 20px rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    cursor: pointer;
}

.footer-content ul li a:hover {
    box-shadow: -50px 50px 50px rgba(53, 53, 53, 0.5);
}

.footer-content ul li:hover .fa {
    color: #fff;
    font-size: 35px;
}

.footer-content ul li:hover:nth-child(1) a {
    background: #3b5999;
}

.footer-content ul li:hover:nth-child(2) a {
    background: #55acee;
}

.footer-content ul li:hover:nth-child(3) a {
    background: #bb0000;
}

.footer-content ul li:hover:nth-child(4) a {
    background: linear-gradient(#400080, transparent),
        linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
}

@media all and (max-width: 500px) {
    .footer-content ul li {
        margin: 0 15px;
    }

    .footer-content ul li .fa {
        font-size: 20px;
        line-height: 40px;
    }

    .footer-content ul li a {
        width: 50px;
        height: 50px;
    }

    .footer-content ul li:hover .fa {
        font-size: 40px;
    }
}

/* copyright bar */

.footer-bottom {
    width: 100vw;
    padding: 20px;
    text-align: center;
}

.footer-bottom p {
    font-size: 17px;
    word-spacing: 2px;
    text-shadow: 1px 1px 4px rgb(196, 196, 196);
    text-transform: capitalize;
}

.footer-bottom span {
    text-decoration: uppercase;
    opacity: .4;
    font-weight: 200;
}

